Fix problem, footer cover button on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
 body{
     background-color: rgba(0,74,173,255);
     font-family: 'Times New Roman', Times, serif;
+    margin: 0;
 }
 /*header style*/
 header {
@@ -94,6 +95,8 @@ header > h1 {
 /*restar button style*/
 .restartSection {
     text-align: center;
+    padding-top: 0;
+    padding-bottom: 100px;
 }
 
 .restart-btn{
@@ -106,6 +109,8 @@ header > h1 {
         border-radius: 4px;
         font-family: 'Times New Roman', Times, serif;
         padding-top: 0;
+        padding-left: 2px;
+        padding-right: 2px;
         display: inline-block;
 }
   
@@ -122,7 +127,7 @@ footer {
     bottom: 0;
     width: 100%;
     background-color: whitesmoke;
-    height: 60px;
+    
 }
 
 /*Link to github style*/
